os/Xtransutil.v.err
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:97:60: error: unknown type name 'Xtransaddr'
   97 | int _XSERVTransConvertAddress(int *familyp, int *addrlenp, Xtransaddr **addrp)
      |                                                            ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:99:5: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   99 |     prmsg(2,"ConvertAddress(%d,%d,%p)\n",*familyp,*addrlenp,*addrp);
      |     ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:193:12: error: call to undeclared function '_XSERVTransGetHostname'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  193 |         int len = _XSERVTransGetHostname (hostnamebuf, sizeof hostnamebuf);
      |                   ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:198:3: error: call to undeclared library function 'free' with type 'void (void *)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  198 |                 free (*addrp);
      |                 ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:198:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'free'
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:199:12: error: use of undeclared identifier 'NULL'
  199 |                 *addrp = NULL;
      |                          ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:202:12: error: call to undeclared library function 'malloc' with type 'void *(unsigned long)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  202 |                 *addrp = malloc (len + 1);
      |                          ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:202:12: note: include the header <stdlib.h> or explicitly provide a declaration for 'malloc'
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:204:3: error: call to undeclared library function 'strcpy' with type 'char *(char *, const char *)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  204 |                 strcpy ((char *) *addrp, hostnamebuf);
      |                 ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:204:3: note: include the header <string.h> or explicitly provide a declaration for 'strcpy'
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:214:15: error: use of undeclared identifier 'NULL'
  214 |             *addrp = NULL;
      |                      ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:260:6: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  260 |             prmsg(1, "mkdir: ERROR: (l)stat failed for %s (%d)\n",
      |             ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:272:6: error: call to undeclared function 'geteuid'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  272 |         if (geteuid() != 0) {
      |             ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:274:3: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  274 |                 prmsg(1, "mkdir: ERROR: euid != 0,"
      |                 ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:281:3: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  281 |                 prmsg(1, "mkdir: Cannot create %s with root ownership\n",
      |                 ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:290:3: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  290 |                 prmsg(1, "mkdir: ERROR: Mode of %s should be set to %04o\n",
      |                 ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:300:6: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  300 |             prmsg(1, "mkdir: ERROR: Cannot create %s\n",
      |             ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:394:3: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  394 |                 prmsg(1, "mkdir: Owner of %s should be set to root\n",
      |                 ^
/home/haplessidiot/Documents/xserver/os/Xtransutil.c:407:3: error: call to undeclared function 'prmsg'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  407 |                 prmsg(1, "mkdir: Mode of %s should be set to %04o\n",
      |                 ^
16 errors generated.

The file /home/haplessidiot/Documents/xserver/os/Xtransutil.c could not be parsed as a C source file.
C2V command: '/home/haplessidiot/.vmodules/c2v/c2v' 'c' '/home/haplessidiot/Documents/xserver/os/Xtransutil.c'
C2V failed to translate the C files. Please report it via GitHub.
